--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.0.34",
     "dotenv": "^8.2.0",
+    "solc": "^0.6.6",
     "web3": "^1.2.7",
     "web3-utils": "^1.2.7"
   }
